[gd_scene load_steps=4 format=3 uid="uid://q1k8djiv4m1s"]

[ext_resource type="Script" uid="uid://ddsi0h3khbayp" path="res://scenes/game2/game.gd" id="1_pdue0"]
[ext_resource type="PackedScene" uid="uid://c0s3e5i31j662" path="res://scenes/game2/lane.tscn" id="2_pdue0"]
[ext_resource type="Texture2D" uid="uid://whsegdldubtd" path="res://textures/common/base_circle.svg" id="3_avsci"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pdue0")

[node name="Lanes" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(640, 320)
layout_mode = 0
offset_left = 320.0
offset_top = 40.0
offset_right = 960.0
offset_bottom = 360.0

[node name="ColorRect" type="ColorRect" parent="Lanes"]
visible = false
layout_mode = 2

[node name="Lanes" type="HBoxContainer" parent="Lanes"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Lane" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Lane2" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Lane3" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Lane4" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Lane5" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Lane6" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Lane7" parent="Lanes/Lanes" instance=ExtResource("2_pdue0")]
layout_mode = 2

[node name="Labels" type="HBoxContainer" parent="Lanes"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Lanes/Labels"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Label=" type="Label" parent="Lanes/Labels"]
custom_minimum_size = Vector2(40, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="Control" parent="."]
custom_minimum_size = Vector2(640, 320)
anchors_preset = 0
offset_left = 320.0
offset_top = 360.0
offset_right = 960.0
offset_bottom = 680.0

[node name="ColorRect" type="ColorRect" parent="Main"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="ColorRectDiceA" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 150.0
color = Color(1, 1, 1, 0.8)

[node name="LabelDiceA" type="Label" parent="Main/ColorRectDiceA"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDiceA2" type="Label" parent="Main/ColorRectDiceA"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "[1,2,3,4,5,6]"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ColorRectDiceB" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 250.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 150.0
color = Color(1, 1, 1, 0.8)

[node name="LabelDiceB" type="Label" parent="Main/ColorRectDiceB"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDiceB2" type="Label" parent="Main/ColorRectDiceB"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "[1,2,3,4,5,6]"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ColorRectDiceC" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 410.0
offset_top = 10.0
offset_right = 550.0
offset_bottom = 150.0
color = Color(1, 1, 1, 0.8)

[node name="LabelDiceC" type="Label" parent="Main/ColorRectDiceC"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDiceC2" type="Label" parent="Main/ColorRectDiceC"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "[1,2,3,4,5,6]"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ButtonRoll" type="Button" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 170.0
offset_top = 170.0
offset_right = 310.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 32
text = "Roll
Dice"

[node name="ButtonPick" type="Button" parent="Main"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 330.0
offset_top = 170.0
offset_right = 470.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 32
text = "Pick
Lane"

[node name="ButtonEnd" type="Button" parent="Main"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 330.0
offset_top = 170.0
offset_right = 470.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 32
text = "End
Turn"

[node name="RollLamps" type="VBoxContainer" parent="Main"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 160)
layout_mode = 0
offset_left = 160.0
offset_top = 320.0
offset_right = 180.0
offset_bottom = 480.0
rotation = 3.1415927
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/RollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Main/RollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Main/RollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Main/RollLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="PickLamps" type="VBoxContainer" parent="Main"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 160)
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 520.0
offset_bottom = 480.0
rotation = 3.1415927
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/PickLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Main/PickLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Main/PickLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Main/PickLamps"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_avsci")
expand_mode = 1

[node name="Dices" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 320.0
offset_bottom = 360.0

[node name="Panel" type="Panel" parent="Dices"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Dices"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Dices/ScrollContainer"]
layout_mode = 2

[node name="Shop" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 360.0
offset_right = 320.0
offset_bottom = 680.0

[node name="Panel" type="Panel" parent="Shop"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Shop"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/ScrollContainer"]
layout_mode = 2

[node name="Score" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 360.0

[node name="Panel" type="Panel" parent="Score"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Score"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Score/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LabelTemp" type="Label" parent="Score/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "999,999,999"
vertical_alignment = 1

[node name="LabelScore2" type="Label" parent="Score/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Score"
vertical_alignment = 2

[node name="LabelScore" type="Label" parent="Score/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "999,999,999"

[node name="LabelTarget2" type="Label" parent="Score/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Target"
vertical_alignment = 2

[node name="LabelTarget" type="Label" parent="Score/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "999,999,999"

[node name="LabelTurn2" type="Label" parent="Score/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Turn"
vertical_alignment = 2

[node name="LabelTurn" type="Label" parent="Score/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "99/99"

[node name="LabelStage2" type="Label" parent="Score/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Stage"
vertical_alignment = 2

[node name="LabelStage" type="Label" parent="Score/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "99/99"

[node name="Item" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 360.0
offset_right = 1280.0
offset_bottom = 680.0

[node name="Panel" type="Panel" parent="Item"]
visible = false
layout_mode = 2

[node name="Labels" type="Control" parent="."]
anchors_preset = 0

[node name="LabelLanes" type="Label" parent="Labels"]
visible = false
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_left = 480.0
offset_right = 800.0
offset_bottom = 40.0
text = "[LANES]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTitle" type="Label" parent="Labels"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_left = 480.0
offset_top = 680.0
offset_right = 800.0
offset_bottom = 720.0
text = "EDICED v0.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDices" type="Label" parent="Labels"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_right = 320.0
offset_bottom = 40.0
text = "[DICES]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelShop" type="Label" parent="Labels"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_top = 680.0
offset_right = 320.0
offset_bottom = 720.0
text = "[SHOP]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="Labels"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_left = 960.0
offset_right = 1280.0
offset_bottom = 40.0
text = "[SCORE]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelItem" type="Label" parent="Labels"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_left = 960.0
offset_top = 680.0
offset_right = 1280.0
offset_bottom = 720.0
text = "[ITEMS]"
horizontal_alignment = 1
vertical_alignment = 1
